# netimport

./: .gitignore  CONTRIBUTING.md  PRODUCTION_READINESS_AUDIT.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
big_example/: config.py  main.py  utils.py
big_example/complex_logic/: data_processor.py  report_generator.py
big_example/data/: customers.json
big_example/docs/: README.md
big_example/domine/: order.py  product.py  promotion.py  shipment.py
big_example/repo/: address_repo.py  category_repo.py  customer_repo.py  invoice_repo.py  order_item_repo.py  order_repo.py  payment_repo.py  product_repo.py  promotion_repo.py  shipment_repo.py
big_example/service/: address_creator.py  category_creator.py  customer_creator.py  invoice_creator.py  order_creator.py  order_item_creator.py  payment_creator.py  product_creator.py  promotion_creator.py  shipment_creator.py
big_example/unused_folder/: another_unused.txt  unused_file.py
big_example/unused_folder/deep_unused_folder/: unused_file.py
example/: main.py
example/domine/: account.py
example/repo/: account_repo.py  user_repo.py
example/service/: account_creator.py  user_creator.py
example/tests/: test_account.py  test_user.py
good_big_example/: __init__.py  application.py  config.py  entities.py  main.py  reporting.py
good_big_example/complex_logic/: data_processor.py  report_generator.py
good_big_example/data/: products.csv
good_big_example/docs/: README.md
good_big_example/domine/: __init__.py  address.py  category.py  customer.py  invoice.py  order_item.py  payment.py
good_big_example/repo/: __init__.py  address_repo.py  category_repo.py  customer_repo.py  invoice_repo.py  order_item_repo.py  order_repo.py  payment_repo.py  product_repo.py  promotion_repo.py  shipment_repo.py
good_big_example/service/: __init__.py  address_creator.py  category_creator.py  customer_creator.py  invoice_creator.py  order_creator.py  order_item_creator.py  payment_creator.py  product_creator.py  promotion_creator.py  shipment_creator.py
good_big_example/unused_folder/deep_unused_folder/: config.json
good_example/: __init__.py  bootstrap.py  entities.py  main.py  ports.py
good_example/domine/: __init__.py
good_example/repo/: __init__.py  account_repo.py  user_repo.py
good_example/service/: __init__.py  account_creator.py  user_creator.py
good_example/tests/: test_account.py  test_user.py
netimport_lib/: __init__.py  cli.py  config_loader.py  graph_draw.py  imports_reader.py  project_file_reader.py  summary_builder.py  summary_builder_constants.py  summary_builder_counts.py  summary_builder_lists.py  summary_builder_metrics.py  summary_builder_project_nodes.py  summary_builder_rankings.py  summary_builder_tables.py  violations.py
netimport_lib/config/: __init__.py
netimport_lib/graph_builder/: __init__.py  graph_builder.py  graph_builder_edges.py  graph_builder_metadata.py  graph_builder_nodes.py  resolver_imports.py  resolver_paths.py  resolver_shared.py
netimport_lib/graph_builder/resolver/: __init__.py  imports.py  shared.py
netimport_lib/policy/: __init__.py
netimport_lib/scanning/: __init__.py  imports.py
netimport_lib/summary_builder/: __init__.py  api.py  counts.py  lists.py  metrics.py  models.py  project_nodes.py  rankings.py  tables.py
netimport_lib/visualizer/: __init__.py  bokeh_plotter.py  bokeh_plotter_constants.json  bokeh_plotter_constants.py  bokeh_plotter_contracts.py  bokeh_plotter_internal_models.py  bokeh_plotter_layout_models.py  bokeh_plotter_layout_ops.py  bokeh_plotter_public_constants_a.py  bokeh_plotter_public_constants_b.py  bokeh_plotter_render_models.py  bokeh_plotter_render_ops.py  bokeh_plotter_structure_ops.py  bokeh_plotter_types.py  bokeh_plotter_v2.py  mpl_plotter.py  plotly_plotter.py  registry.py
netimport_lib/visualizer/bokeh_plotter/: __init__.py  constants.py  contracts.py  public_constants_a.py  public_constants_b.py  types.py
netimport_lib/visualizer/bokeh_plotter/models/: __init__.py  internal.py  layout.py  render.py
netimport_lib/visualizer/bokeh_plotter/ops/: __init__.py  layout.py  render.py  structure.py
stubs/networkx/: __init__.pyi
stubs/plotly/: __init__.pyi  graph_objects.pyi
stubs/toml/: __init__.pyi
tests/: __init__.py  summary_builder_support.py  test_bokeh_plotter.py  test_bokeh_plotter_browser.py  test_bokeh_plotter_headless.py  test_bokeh_plotter_layout.py  test_bokeh_plotter_module_api.py  test_bokeh_plotter_ranges.py  test_bokeh_plotter_render_data.py  test_cli.py  test_cli_config_loading.py  test_cli_config_override.py  test_cli_summary.py  test_cli_visualizer.py  test_config_loader.py  test_graph_builder.py  test_graph_builder_core.py  test_graph_builder_metadata.py  test_imports_reader.py  test_mpl_plotter.py  test_project_file_reader.py  test_project_metadata.py  test_resolver_imports.py  test_summary_builder.py  test_summary_builder_json.py  test_summary_builder_text.py  test_visualizer_registry.py
tests/bokeh_plotter_support/: bounds.py  browser.py  geometry.py  graphs.py  names.py  plot_assertions.py  rendering.py  toolbar.py
