[project]
name = "netimport"
version = "0.1.4"
description = "Static analysis CLI for Python import graphs and dependency summaries"
authors = [
    { name = "Beilak Aliev", email = "beilak.aliev@gmail.com" },
]
license = "MIT"
readme = "README.md"
keywords = [
    "python",
    "architecture",
    "linter",
    "static analysis",
    "import graph",
    "dependencies",
    "visualization",
    "coupling",
    "cohesion",
]
requires-python = ">=3.10"
dependencies = [
    "toml (>=0.10.2,<0.11.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "bokeh (>=3.7.3,<4.0.0)",
]
dynamic = ["classifiers"]

[project.scripts]
netimport = "netimport_lib.cli:main"

[project.urls]
Homepage = "https://github.com/beilak/netimport"
Repository = "https://github.com/beilak/netimport"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Environment :: Console",
    "Typing :: Typed",
]
include = ["netimport_lib/py.typed"]
packages = [{ include = "netimport_lib" }]

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pytest = "*"
bandit = {extras = ["toml"], version = ">=1.9, <2.0"}
wemake-python-styleguide = {version = "1.6.1", python = ">=3.10,<4.0"}

[tool.netimport]
ignored_dirs = ["venv", ".venv", "tests", "docs", "__pycache__", "node_modules", "migrations", ".git", ".hg"]
ignored_files = ["setup.py", "manage.py"]
ignore_stdlib = false
ignore_external_lib = false
ignored_nodes = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
mypy_path = "stubs"
exclude = [
    "^example/",
    "^big_example/",
]

[tool.pytest.ini_options]
addopts = "-x"
testpaths = ["tests"]

[tool.bandit]
# The distributable library is the security gate. Demo projects, tests, and
# stubs stay outside the default repo-wide scan to keep findings actionable.
exclude_dirs = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".env",
    "__pycache__",
    "venv",
    "tests",
    "example",
    "big_example",
    "stubs",
]
include = ["*.py"]

[tool.bandit.assert_used]
skips = []

[tool.bandit.hardcoded_tmp_directory]
tmp_dirs = ["/tmp", "/var/tmp", "/dev/shm", "/run/shm", "/private/tmp"]

[tool.bandit.shell_injection]
subprocess = [
    "subprocess.Popen",
    "subprocess.call",
    "subprocess.check_call",
    "subprocess.check_output",
    "subprocess.run",
]
shell = [
    "os.system",
    "os.popen",
    "os.popen2",
    "os.popen3",
    "os.popen4",
    "popen2.popen2",
    "popen2.popen3",
    "popen2.popen4",
    "popen2.Popen3",
    "popen2.Popen4",
    "commands.getoutput",
    "commands.getstatusoutput",
    "subprocess.getoutput",
    "subprocess.getstatusoutput",
    "asyncio.create_subprocess_shell",
]
no_shell = [
    "os.execl",
    "os.execle",
    "os.execlp",
    "os.execlpe",
    "os.execv",
    "os.execve",
    "os.execvp",
    "os.execvpe",
    "os.spawnl",
    "os.spawnle",
    "os.spawnlp",
    "os.spawnlpe",
    "os.spawnv",
    "os.spawnve",
    "os.spawnvp",
    "os.spawnvpe",
    "os.startfile",
    "asyncio.create_subprocess_exec",
]

[tool.bandit.try_except_pass]
check_typed_exception = true

[tool.bandit.try_except_continue]
check_typed_exception = true

[tool.bandit.weak_cryptographic_key]
weak_key_size_dsa_high = 2048
weak_key_size_dsa_medium = 3072
weak_key_size_rsa_high = 2048
weak_key_size_rsa_medium = 3072
weak_key_size_ec_high = 224
weak_key_size_ec_medium = 256

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".venv",
    ".env",
    ".pytest_cache",
    "example",
    "big_example",
]
fix = false
unsafe-fixes = false
show-fixes = true
target-version = "py310"
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D213",
    "EM",
    "FBT",
    "ISC001",
    "TRY003",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = [
    "D",
    "PLR2004",
    "S101",
]
"netimport_lib/visualizer/bokeh_plotter_layout_ops.py" = ["SLF001"]
"netimport_lib/visualizer/bokeh_plotter_render_ops.py" = ["SLF001"]
"netimport_lib/visualizer/bokeh_plotter_structure_ops.py" = ["SLF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2
